c/src/test/resources/c/nec_inline_bnc/invalid/inf1.ctrl
<controlFile>
  <sourceFile name="../inf1.c" id="1" />
  <run>
    <startPosition fileId="1" line="1" />
    <wayPoint fileId="1" line="7" />
    <wayPoint fileId="1" line="13" />
    <wayPoint fileId="1" line="23" />
    <wayPoint fileId="1" line="24" />
    <endPosition fileId="1" line="27" />
  </run>
</controlFile>